Bug: the correct align the headers from all the tables

--- a/ProjectLine.UI/src/app/components/projects/project-list/project-list.component.scss
+++ b/ProjectLine.UI/src/app/components/projects/project-list/project-list.component.scss
@@ -20,5 +20,8 @@
             display: block;
             overflow-x: auto;
         }
+        .mat-header-cell, .mat-cell {
+            min-width: 120px;
+          }
     }
 }
