--- a/ProjectLine.UI/src/app/components/roles/roles-list/roles-list.component.scss
+++ b/ProjectLine.UI/src/app/components/roles/roles-list/roles-list.component.scss
@@ -19,5 +19,8 @@
             display: block;
             overflow-x: auto;
         }
+        .mat-header-cell, .mat-cell {
+            min-width: 120px;
+          }
     }
 }
